--- a/client/src/app/containers/language-selector/language-selector.component.html
+++ b/client/src/app/containers/language-selector/language-selector.component.html
@@ -1,12 +1,12 @@
 <div class="lang_selector">
-    <button (click)="setLangMenu()" class="current_lang_btn">
+    <button (click)="toggleLangMenu()" class="current_lang_btn">
         <img [src]="currentLang.imgUrl" [alt]="currentLang.name" />
         <!--<span>{{currentLang.shorthand}}</span>-->
     </button>
 
-    <div *ngIf="langMenu" class="lang_menu">
+    <div *ngIf="showLangMenu" class="lang_menu">
         <button
-            *ngFor="let language of languagesLists; index as i"
+            *ngFor="let language of languagesLists"
             (click)="changeLanguage(language.code)"
             class="lang_btn">
                 <img [src]="language.imgUrl" [alt]="language.name" />
