--- a/client/src/app/containers/cart-item/cart-item.component.scss
+++ b/client/src/app/containers/cart-item/cart-item.component.scss
@@ -36,32 +36,10 @@
             .quantity_delete_div {
                 display: flex;
         
-                button {
-                    border: none;
-                }
-
-                .counter {
-                    display: flex;
-                    justify-content: center;
-                    align-items: center;
-                    margin-right: 1rem;
-                    border: 1px solid $secondary-color;
-
-                    >button {
-                        width: 26px;
-                        height: 26px;
-                        background-color: transparent;
-                    }
-
-                    >input {
-                        width: 3rem;
-                        border: none;
-                    }
-                }
-
                 .delete_btn {
                     width: 30px;
                     height: 30px;
+                    border: none;
                     color: $secondary-color;
                     background-color: transparent;
                     >fa-icon {
@@ -73,7 +51,7 @@
             .price {
                 font-size: 1.8rem;
                 font-weight: 600;
-                color: $tertiary-color;
+                color: black;
             }
         }
     }
