--- a/client/src/variables.scss
+++ b/client/src/variables.scss
@@ -6,6 +6,7 @@
 $primary-color: white;
 $secondary-color: rgb(12,120,84);
 $tertiary-color: rgb(9,145,97);
+$quaternary-color: rgb(151, 190, 177);
 $highlight-color: rgb(189,223,85);
 $logo-color: rgb(229, 151, 0);
 $error_color: rgb(189, 12, 12);
