renaming & minor modifs

--- a/client/src/app/pages/sign/signin/signin.component.html
+++ b/client/src/app/pages/sign/signin/signin.component.html
@@ -62,7 +62,7 @@
         <div class="err_msg">{{errMsg}}</div>
     }
 
-    <p class="redirect_txt">{{ t(trPath+'.notHaveAccount') }} <a routerLink="/user/signup">{{ t(trPath+'.createAccount') }}</a></p>
+    <p class="redirect_txt">{{ t(trPath+'.notHaveAccount') }} <a routerLink="/signup">{{ t(trPath+'.createAccount') }}</a></p>
 
 </section>
 </ng-container>
