--- a/client/src/app/pages/test/test.component.html
+++ b/client/src/app/pages/test/test.component.html
@@ -4,6 +4,6 @@
         <article>
             <p>{{ t(trPath+'.text') }}</p>
         </article>
-        <app-google-map></app-google-map>
+        <app-open-street-map></app-open-street-map>
     </section>
 </ng-container>
