--- a/client/src/app/pages/sign/signup/signup.component.html
+++ b/client/src/app/pages/sign/signup/signup.component.html
@@ -93,7 +93,7 @@
             <div class="err_msg">{{errMsg}}</div>
         }
 
-        <p class="redirect_txt">{{ t(trPath+'.haveAccount') }} <a routerLink="/user/signin">{{ t(trPath+'.signinHere') }}</a></p>
+        <p class="redirect_txt">{{ t(trPath+'.haveAccount') }} <a routerLink="/signin">{{ t(trPath+'.signinHere') }}</a></p>
     
     </section>
 </ng-container>
